Eclipse 4.25 (M3) JDT Patch for Groovy-Eclipse
https://github.com/eclipse-jdt/eclipse.jdt.core/releases/tag/S4_25_0_M3

for #1377